fix: CLIN-976 wrong colors

--- a/src/views/screens/search/table/nanuqExportButton.module.scss
+++ b/src/views/screens/search/table/nanuqExportButton.module.scss
@@ -1,4 +1,7 @@
 .nanuqButton {
+  &,
+  button {
     padding-left: 0;
     padding-right: 0;
+  }
 }
